--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velasquez_Summer_SE1</title>
     <link rel="stylesheet" href="jer.css">
+    <script src="script1.js".js"></script>
 </head>
 <body>
+
+
     <div class="jerjer">
     <H1 > Summative Exam </H1>
     <p  > Velasquez, Jerome Tristan S. </p>
