link new folder and file of js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velasquez_Summer_SE1</title>
     <link rel="stylesheet" href="jer.css">
-    <script src="script1.js".js"></script>
+    <script src="java/script1.js"></script>
+    <script src="java/script2.js"></script>
 </head>
 <body>
 
